<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainScrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context=".MainActivity">

            <ImageView
                android:id="@+id/imageViewBackground"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:contentDescription="@string/description_of_background"
                app:layout_constraintBottom_toBottomOf="@+id/textViewPressure"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@android:color/holo_blue_bright" />

            <ImageView
                android:id="@+id/imageViewWeatherIcon"
                android:layout_width="@dimen/weather_icon_size"
                android:layout_height="@dimen/weather_icon_size"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:contentDescription="@string/description_weather_icon"
                app:layout_constraintEnd_toStartOf="@+id/textViewTemp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textViewCity"
                app:srcCompat="@android:drawable/btn_star_big_off" />

            <TextView
                android:id="@+id/textViewTemp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginTop="8dp"
                android:textColor="@android:color/background_light"
                android:textSize="60sp"
                app:layout_constraintBottom_toBottomOf="@+id/imageViewWeatherIcon"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/imageViewWeatherIcon"
                app:layout_constraintTop_toTopOf="@+id/imageViewWeatherIcon"
                android:text="@string/test_temp" />

            <View
                android:id="@+id/border"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_margin="24dp"
                android:background="@android:color/background_light"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textViewDescription" />

            <TextView
                android:id="@+id/textViewWindLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="@string/wind_label"
                app:layout_constraintEnd_toStartOf="@+id/textViewPressureLabel"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/border" />

            <TextView
                android:id="@+id/textViewPressureLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="@string/pressure_label"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/border" />

            <TextView
                android:id="@+id/textViewHumidityLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="@string/humidity_label"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/textViewPressureLabel"
                app:layout_constraintTop_toBottomOf="@+id/border" />

            <TextView
                android:id="@+id/textViewWind"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:paddingBottom="8dp"
                android:textColor="@android:color/background_light"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="@+id/textViewWindLabel"
                app:layout_constraintStart_toStartOf="@+id/textViewWindLabel"
                app:layout_constraintTop_toBottomOf="@+id/textViewWindLabel"
                android:text="@string/test_wind" />

            <TextView
                android:id="@+id/textViewPressure"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:paddingBottom="8dp"
                android:textColor="@android:color/background_light"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="@+id/textViewPressureLabel"
                app:layout_constraintStart_toStartOf="@+id/textViewPressureLabel"
                app:layout_constraintTop_toBottomOf="@+id/textViewPressureLabel"
                android:text="@string/test_pressure" />

            <TextView
                android:id="@+id/textViewHumidity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:paddingBottom="8dp"
                android:textColor="@android:color/background_light"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="@+id/textViewHumidityLabel"
                app:layout_constraintStart_toStartOf="@+id/textViewHumidityLabel"
                app:layout_constraintTop_toBottomOf="@+id/textViewHumidityLabel"
                android:text="@string/test_humidity" />

            <ImageView
                android:id="@+id/imageViewIconBack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:contentDescription="@string/description_show_today_weather"
                android:onClick="onClickShowTodayWeather"
                android:visibility="invisible"
                app:layout_constraintBottom_toTopOf="@+id/border"
                app:layout_constraintEnd_toStartOf="@+id/imageViewWeatherIcon"
                app:layout_constraintStart_toStartOf="@+id/imageViewBackground"
                app:layout_constraintTop_toTopOf="@+id/imageViewWeatherIcon"
                app:srcCompat="@android:drawable/ic_menu_revert" />

            <TextView
                android:id="@+id/textViewForToday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:onClick="onClickShowTodayWeather"
                android:text="@string/for_today_label"
                android:textColor="@android:color/background_light"
                android:textSize="12sp"
                android:visibility="invisible"
                app:layout_constraintEnd_toEndOf="@+id/imageViewIconBack"
                app:layout_constraintStart_toStartOf="@+id/imageViewIconBack"
                app:layout_constraintTop_toBottomOf="@+id/imageViewIconBack" />

            <ImageView
                android:id="@+id/imageViewIconTomorrow"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:contentDescription="@string/description_show_tomorrow_weather"
                android:onClick="onClickShowTomorrowWeather"
                app:layout_constraintBottom_toBottomOf="@+id/imageViewIconBack"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/textViewTemp"
                app:layout_constraintTop_toTopOf="@+id/imageViewIconBack"
                app:srcCompat="@drawable/icon_next_right" />

            <TextView
                android:id="@+id/textViewForTomorrow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:onClick="onClickShowTomorrowWeather"
                android:text="@string/for_tomorrow_label"
                android:textColor="@android:color/background_light"
                android:textSize="12sp"
                app:layout_constraintBottom_toBottomOf="@+id/textViewForToday"
                app:layout_constraintEnd_toEndOf="@+id/imageViewIconTomorrow"
                app:layout_constraintStart_toStartOf="@+id/imageViewIconTomorrow"
                app:layout_constraintTop_toTopOf="@+id/textViewForToday" />

            <TextView
                android:id="@+id/textViewCity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Title.Inverse"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/imageViewBackground"
                tools:text="@string/city_test" />

            <TextView
                android:id="@+id/textViewDescription"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Large.Inverse"
                app:layout_constraintStart_toStartOf="@+id/imageViewWeatherIcon"
                app:layout_constraintTop_toBottomOf="@+id/imageViewWeatherIcon"
                app:layout_constraintEnd_toStartOf="@id/textViewForTomorrow"
                android:text="@string/weather_description_test" />

            <Button
                android:id="@+id/buttonToday"
                android:tag="@string/tag_today"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@android:color/holo_blue_dark"
                android:text="@string/button_for_today"
                android:textColor="@android:color/background_light"
                android:onClick="onClickShowWeatherDetail"
                app:layout_constraintEnd_toStartOf="@id/buttonTomorrow"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageViewBackground" />

            <Button
                android:id="@+id/buttonTomorrow"
                android:layout_width="0dp"
                android:tag="@string/tag_tomorrow"
                android:layout_height="wrap_content"
                android:background="@android:color/holo_blue_dark"
                android:text="@string/button_for_tomorrow"
                android:textColor="@android:color/background_light"
                android:onClick="onClickShowWeatherDetail"
                app:layout_constraintEnd_toStartOf="@id/buttonOnThreeDays"
                app:layout_constraintStart_toEndOf="@id/buttonToday"
                app:layout_constraintTop_toBottomOf="@+id/imageViewBackground" />

            <Button
                android:id="@+id/buttonOnThreeDays"
                android:layout_width="0dp"
                android:tag="@string/tag_three_days"
                android:layout_height="wrap_content"
                android:background="@android:color/holo_blue_dark"
                android:text="@string/button_for_three_days"
                android:textColor="@android:color/background_light"
                android:onClick="onClickShowWeatherDetail"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/buttonTomorrow"
                app:layout_constraintTop_toBottomOf="@+id/imageViewBackground" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/recyclerViewWeather"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:isScrollContainer="false"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/buttonTomorrow"/>

            <TextView
                android:id="@+id/textViewLabelRussia"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_in_russia"
                android:layout_marginEnd="8dp"
                app:layout_constraintTop_toTopOf="@id/switchCities"
                app:layout_constraintBottom_toBottomOf="@id/switchCities"
                app:layout_constraintEnd_toStartOf="@id/switchCities"/>

            <android.support.v7.widget.SwitchCompat
                android:theme="@style/MySwitch"
                android:id="@+id/switchCities"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@id/recyclerViewWeather"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <TextView
                android:id="@+id/textViewLabelWorld"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/in_world_label"
                android:layout_marginStart="8dp"
                app:layout_constraintTop_toTopOf="@id/switchCities"
                app:layout_constraintBottom_toBottomOf="@id/switchCities"
                app:layout_constraintStart_toEndOf="@id/switchCities"/>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/recyclerViewCities"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:isScrollContainer="false"
                app:layout_constraintTop_toBottomOf="@id/switchCities"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <ImageView
                android:id="@+id/imageViewMyLocation"
                android:layout_width="@dimen/image_location_size"
                android:layout_height="@dimen/image_location_size"
                android:layout_marginEnd="8dp"
                android:layout_marginTop="8dp"
                android:onClick="onClickShowMyWeather"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:contentDescription="@string/description_show_my_weather"
                app:srcCompat="@android:drawable/ic_menu_compass" />

            <ProgressBar
                android:id="@+id/progressBarLoading"
                android:layout_width="@dimen/size_progress_bar"
                android:layout_height="@dimen/size_progress_bar"
                app:layout_constraintBottom_toBottomOf="@id/imageViewBackground"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:visibility="invisible"/>


        </android.support.constraint.ConstraintLayout>

</ScrollView>
