<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="8dp">

    <ImageView
        android:id="@+id/imageViewIcon"
        android:layout_width="@dimen/small_weather_icon"
        android:layout_height="@dimen/small_weather_icon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/btn_dialog"
        android:contentDescription="@string/description_weather_icon"/>

    <TextView
        android:id="@+id/textViewDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:text="@string/test_date"
        android:layout_margin="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/textViewTemperature"
        app:layout_constraintTop_toTopOf="@+id/textViewTemperature" />

    <TextView
        android:id="@+id/textViewTemperature"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/test_temp_small"
        android:textSize="18sp"
        android:layout_margin="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/imageViewIcon"
        app:layout_constraintEnd_toStartOf="@+id/imageViewIcon"
        app:layout_constraintTop_toTopOf="@+id/imageViewIcon" />

    <View
        android:id="@+id/border"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_margin="8dp"
        android:background="@android:color/holo_blue_dark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageViewIcon"/>
</android.support.constraint.ConstraintLayout>